Redact web lab1 :memo:

--- a/2 curs/2_half/Web/lab1/three.html
+++ b/2 curs/2_half/Web/lab1/three.html
@@ -2,24 +2,23 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="description" content="Методы статистики и аналитики данных">
-<meta name="keywords" content="аналитика, статистика, машинное обучение">
-<meta name="author" content="Иванов Иван Иванович">
-<title>Методы аналитики данных</title>
+<meta name="description" content="Статистика и аналитика данных — развитие, методы и технологии">
+<meta name="keywords" content="статистика, аналитика данных, big data, анализ">
+<meta name="author" content="Кочнев Дмитрий Олегович">
+<title>Статистика и аналитика данных</title>
 </head>
 
 <body>
 <div style="width:1000px;margin:auto;font-family:Arial;">
-<header style="background:#e8f5e9;padding:20px;text-align:center;">
+<div style="background:#e3f2fd;padding:20px;text-align:center;">
 <h1>Статистика и аналитика данных</h1>
 <h2>Методы и инструменты</h2>
-</header>
 
-<nav style="background:#c8e6c9;padding:10px;text-align:center;">
-<a href="index.html">Главная</a> |
-<a href="analytics5.html">HTML5 страница</a> |
-<a href="sources.html">Источники</a>
-</nav>
+<div style="background:#bbdefb;padding:10px;text-align:center;">
+<a href="first.html">Главная</a> |
+<a href="three.html">HTML5 страница</a> |
+<a href="sekond.html">Источники</a>
+</div>
 
 <main style="padding:20px;text-align:justify;">
 <section>
@@ -33,7 +32,7 @@
 </p>
 
 <video width="400" controls>
-<source src="analytics.mp4" type="video/mp4">
+<source src="analitic.mp4" type="video/mp4">
 </video>
 
 <audio controls>
@@ -57,8 +56,8 @@
 </aside>
 </main>
 
-<footer style="background:#e8f5e9;padding:10px;text-align:center;">
-<address>Автор: Иванов Иван Иванович</address>
+<footer  style="background:#e3f2fd;padding:10px;text-align:center;">
+<address>Автор: Кочнев Д. О.</address>
 </footer>
 </div>
 </body>
