--- a/2 curs/2_half/Web/lab1/first.html
+++ b/2 curs/2_half/Web/lab1/first.html
@@ -22,7 +22,7 @@
 <a href="sekond.html">Источники</a>
 </div>
 
-<div style="padding:20px;text-align:justify;"></div>
+<div style="padding:20px;text-align:justify;">
 
 <h2>Развитие статистики и аналитики данных</h2>
 <p>
@@ -37,6 +37,35 @@
 <p>
 Современные системы используют <abbr title="искусственный интеллект">ИИ</abbr>, 
 алгоритмы <code>machine learning</code> и методы прогнозирования.
+</p>
+
+<h3>От классической статистики к Big Data</h3>
+<p>
+<strong>До 1990-х годов</strong> статистика развивалась как фундаментальная наука. Работы Рональда Фишера, Карла Пирсона и других заложили основу проверки гипотез, регрессионного анализа и планирования экспериментов. В экономике статистика позволяла измерять ВВП и инфляцию, в медицине — стала базой доказательной медицины (рандомизированные испытания), в социологии — методом изучения общественного мнения через выборки.
+</p>
+
+<h3>1990-е: взрыв данных и рождение массовой аналитики</h3>
+<p>
+Снижение стоимости вычислительной техники и распространение интернета привели к экспоненциальному росту объёмов информации. Появились логи серверов, данные с кассовых аппаратов, цифровые транзакции. Инструменты вроде Excel сделали статистику доступной для менеджеров. Возник термин <em>Data Mining</em> — добыча данных, ориентированная на поиск неизвестных закономерностей (например, правило «пиво и подгузники»).
+</p>
+
+<h3>2000-е: хранилища данных и бизнес‑аналитика (BI)</h3>
+<p>
+Компании осознали необходимость единого источника правды. Концепции хранилищ данных (Билл Инмон, Ральф Кимбалл) и процессы ETL (извлечение, преобразование, загрузка) позволили консолидировать информацию из разных систем. На этой базе выросла бизнес‑аналитика (BI) — дашборды и отчёты для руководителей, помогающие принимать стратегические решения.
+</p>
+
+<h3>2010-е: эра больших данных и машинного обучения</h3>
+<p>
+Объёмы информации достигли зеттабайтов. Появились понятия «трёх V»: Volume (объём), Velocity (скорость), Variety (разнообразие). Hadoop и Spark обеспечили распределённую обработку данных на тысячах серверов. Машинное обучение (нейросети, глубокое обучение) перешло из лабораторий в промышленность: распознавание лиц, рекомендательные системы, предиктивная аналитика. Возникла профессия Data Scientist.
+</p>
+
+<h3>Современность: аналитика реального времени и ИИ в облаках</h3>
+<p>
+Сегодня статистика, искусственный интеллект и облачные вычисления работают вместе. Потоковая обработка (Kafka, Flink) позволяет реагировать на события за миллисекунды — от мониторинга финансовых рынков до профилактики поломок на заводах. Облачные платформы (AWS, Azure, Google Cloud) делают мощные вычисления доступными любому бизнесу. Автоматическое машинное обучение (AutoML) и генеративные модели упрощают анализ, а вопросы этики и приватности данных выходят на первый план.
+</p>
+
+<p>
+Таким образом, эволюция от скромных статистических таблиц до нейросетей, управляющих цифровой экономикой, демонстрирует неразрывную связь математической строгости и вычислительной мощи.
 </p>
 
 <h2>Этапы развития аналитики</h2>
@@ -57,8 +86,7 @@
 <tfoot>
 <tr><td colspan="3">
     <div style="padding:10px;text-align:center;">
-    Современная аналитика основана на ИИ и облаках</td></tr>
-    </div>
+    Современная аналитика основана на ИИ и облаках</div></td></tr>
 </tfoot>
 </table>
 </div>
@@ -70,4 +98,3 @@
 
 </body>
 </html>
-
