--- a/2 curs/2_half/Web/lab1/three.html
+++ b/2 curs/2_half/Web/lab1/three.html
@@ -1,64 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<meta name="description" content="Статистика и аналитика данных — развитие, методы и технологии">
-<meta name="keywords" content="статистика, аналитика данных, big data, анализ">
-<meta name="author" content="Кочнев Дмитрий Олегович">
-<title>Статистика и аналитика данных</title>
+    <meta charset="utf-8">
+    <meta name="description" content="Статистика и аналитика данных — развитие, методы и технологии">
+    <meta name="keywords" content="статистика, аналитика данных, big data, анализ">
+    <meta name="author" content="Кочнев Дмитрий Олегович">
+    <title>Статистика и аналитика данных</title>
 </head>
-
 <body>
-<div style="width:1000px;margin:auto;font-family:Arial;">
-<div style="background:#e3f2fd;padding:20px;text-align:center;">
-<h1>Статистика и аналитика данных</h1>
-<h2>Методы и инструменты</h2>
 
-<div style="background:#bbdefb;padding:10px;text-align:center;">
-<a href="first.html">Главная</a> |
-<a href="three.html">HTML5 страница</a> |
-<a href="sekond.html">Источники</a>
+<div style="width:1000px; margin:auto; font-family:Arial; background:#ffffff;">
+
+    <header style="background:#e3f2fd; padding:20px; text-align:center;">
+        <h1>Статистика и аналитика данных</h1>
+        <h2>Методы и инструменты</h2>
+    </header>
+
+    <nav style="background:#bbdefb; padding:10px; text-align:center;">
+        <a href="first.html">Главная</a> |
+        <a href="three.html">HTML5 страница</a> |
+        <a href="sekond.html">Источники</a>
+    </nav>
+
+    <main style="padding:20px; text-align:justify;">
+
+        <section>
+            <h2>Методы статистики и аналитики</h2>
+            <hr>
+            <p>
+                Методы аналитики данных включают статистические модели, машинное обучение и прогнозирование.
+                Классические методы — регрессия, корреляция и анализ временных рядов.
+                Современные — нейронные сети и кластеризация.
+                Аналитика применяется в бизнесе, медицине и науке.
+            </p>
+
+            <video width="400" controls>
+                <source src="analitic.mp4" type="video/mp4">
+                Ваш браузер не поддерживает видео.
+            </video>
+
+            <audio controls>
+                <source src="data.mp3" type="audio/mpeg">
+                Ваш браузер не поддерживает аудио.
+            </audio>
+        </section>
+
+        <aside>
+            <h3>Классификация методов</h3>
+            <ol>
+                <li>Классическая статистика
+                    <ol>
+                        <li>Описательная</li>
+                        <li>Регрессия</li>
+                    </ol>
+                </li>
+                <li>Машинное обучение
+                    <ol>
+                        <li>Классификация</li>
+                        <li>Кластеризация</li>
+                    </ol>
+                </li>
+                <li>Применение
+                    <ol>
+                        <li>Бизнес</li>
+                        <li>Наука</li>
+                    </ol>
+                </li>
+            </ol>
+        </aside>
+    </main>
+
+    <footer style="background:#e3f2fd; padding:10px; text-align:center;">
+        <address>Автор: Кочнев Д. О.</address>
+    </footer>
+
 </div>
 
-<main style="padding:20px;text-align:justify;">
-<section>
-<h2>Методы статистики и аналитики</h2>
-<hr>
-<p>
-Методы аналитики данных включают статистические модели, машинное обучение и прогнозирование.
-Классические методы — регрессия, корреляция и анализ временных рядов. 
-Современные — нейронные сети и кластеризация. 
-Аналитика применяется в бизнесе, медицине и науке.
-</p>
-
-<video width="400" controls>
-<source src="analitic.mp4" type="video/mp4">
-</video>
-
-<audio controls>
-<source src="data.mp3" type="audio/mpeg">
-</audio>
-</section>
-
-<aside>
-<h3>Классификация методов</h3>
-<ol>
-<li>Классическая статистика
-    <ol><li>Описательная</li><li>Регрессия</li></ol>
-</li>
-<li>Машинное обучение
-    <ol><li>Классификация</li><li>Кластеризация</li></ol>
-</li>
-<li>Применение
-    <ol><li>Бизнес</li><li>Наука</li></ol>
-</li>
-</ol>
-</aside>
-</main>
-
-<footer  style="background:#e3f2fd;padding:10px;text-align:center;">
-<address>Автор: Кочнев Д. О.</address>
-</footer>
-</div>
 </body>
 </html>
