Add text to lab1 web :memo:

--- a/2 curs/2_half/Web/lab1/sekond.html
+++ b/2 curs/2_half/Web/lab1/sekond.html
@@ -14,7 +14,7 @@
 
 <div style="background:#bbdefb;padding:10px;text-align:center;">
 <a href="first.html">Главная</a> |
-<a href="three.html">HTML5 страница</a> |
+<a href="three.html">Методы и инструменты</a> |
 <a href="sekond.html">Источники</a>
 </div>
 
