--- a/2 curs/2_half/Web/lab1/three.html
+++ b/2 curs/2_half/Web/lab1/three.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Статистика и аналитика данных — развитие, методы и технологии">
-    <meta name="keywords" content="статистика, аналитика данных, big data, анализ">
+    <meta name="keywords" content="статистика, аналитика данных, big data, анализ, машинное обучение, прогнозирование">
     <meta name="author" content="Кочнев Дмитрий Олегович">
     <title>Статистика и аналитика данных</title>
 </head>
@@ -18,7 +18,7 @@
 
     <nav style="background:#bbdefb; padding:10px; text-align:center;">
         <a href="first.html">Главная</a> |
-        <a href="three.html">HTML5 страница</a> |
+        <a href="three.html">Методы и инструменты</a> |
         <a href="sekond.html">Источники</a>
     </nav>
 
@@ -28,10 +28,21 @@
             <h2>Методы статистики и аналитики</h2>
             <hr>
             <p>
-                Методы аналитики данных включают статистические модели, машинное обучение и прогнозирование.
-                Классические методы — регрессия, корреляция и анализ временных рядов.
-                Современные — нейронные сети и кластеризация.
-                Аналитика применяется в бизнесе, медицине и науке.
+                Аналитика данных — это совокупность методов и инструментов для обработки, анализа и интерпретации больших объёмов информации. 
+                Основной целью является выявление закономерностей, прогнозирование тенденций и поддержка принятия решений.
+            </p>
+            <p>
+                Методы аналитики делятся на классические и современные. К классическим относятся:
+                регрессия, корреляционный анализ, анализ временных рядов, дисперсионный анализ и описательная статистика.
+                Они позволяют выявлять взаимосвязи между переменными, оценивать тренды и строить простые прогнозные модели.
+            </p>
+            <p>
+                Современные методы включают машинное обучение, нейронные сети, кластеризацию, методы понижения размерности и алгоритмы оптимизации.
+                Они особенно эффективны при работе с большими данными (Big Data), текстовыми и изображенческими данными, а также с потоковыми данными.
+            </p>
+            <p>
+                Применение аналитики данных разнообразно: бизнес использует её для прогнозирования спроса и персонализации предложений, медицина — для диагностики и прогнозирования заболеваний, 
+                наука — для моделирования сложных систем и анализа экспериментальных данных.
             </p>
 
             <video width="400" controls>
@@ -52,18 +63,24 @@
                     <ol>
                         <li>Описательная</li>
                         <li>Регрессия</li>
+                        <li>Корреляция</li>
+                        <li>Анализ временных рядов</li>
                     </ol>
                 </li>
                 <li>Машинное обучение
                     <ol>
                         <li>Классификация</li>
                         <li>Кластеризация</li>
+                        <li>Методы понижения размерности</li>
+                        <li>Нейронные сети</li>
                     </ol>
                 </li>
                 <li>Применение
                     <ol>
                         <li>Бизнес</li>
                         <li>Наука</li>
+                        <li>Медицина</li>
+                        <li>Технологии</li>
                     </ol>
                 </li>
             </ol>
